Fix scrollbars

--- a/src/components/editor/editor.module.pcss
+++ b/src/components/editor/editor.module.pcss
@@ -16,7 +16,6 @@
   & nav {
     background-color: var(--color-secondary-20);
     border-bottom: solid var(--color-secondary-10) 1px;
-    height: 3em;
 
     & ul {
       display: flex;
@@ -105,7 +104,6 @@ li:hover .close {
   background-color: var(--color-secondary-20);
   border-top: 1px solid var(--color-secondary-10);
   padding: 0.5rem;
-  height: 3.25rem;
 }
 
 .test {
