--- a/src/components/terminal/terminal.module.css
+++ b/src/components/terminal/terminal.module.css
@@ -6,7 +6,7 @@
 
   text-align: left;
   overflow-wrap: break-word;
-  overflow-y: scroll;
+  overflow-y: auto;
   outline: none;
   line-height: 22px;
 }
